add the h1 to the file

--- a/files/index.html
+++ b/files/index.html
@@ -48,6 +48,9 @@
             </aside>
         </nav>
     </section>
+    <section>
+                                   <h1>hello world</h1>
+    </section>
     <script src="index.js"></script>
 </body> 
 </html>
